--- a/server/views/ResetPassword.hbs
+++ b/server/views/ResetPassword.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Verification</title>
@@ -132,4 +132,4 @@
       }
     </script>
   </body>
-</html>
+</html> --}}
