--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,12 +4,46 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .topbar {
   position: sticky;
   top: 0px;
   z-index: 49;
   color: rgb(57, 28, 204);
+}
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #bd0091 #f2fdff;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+*::-webkit-scrollbar-track {
+  background-color: #f2fdff;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #dce6e8;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #dce6e8;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: purple;
+  border: 2px solid #ffffff;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(96, 0, 96);
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: purple;
 }
 
 @layer base {
