--- a/server/views/ResetPassword.hbs
+++ b/server/views/ResetPassword.hbs
@@ -1,22 +1,26 @@
-{{!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Verification</title>
 
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
+  * {
+    font-family: Poppins;
+  }
       body {
         font-family: Poppins;
         margin: 0px;
         width: 100%;
         height: 100vh;
-        background-color: gray;
+        background-color: purple;
         display: flex;
         justify-content: center;
         align-items: center;
       }
-
+  h1 {
+    color: purple;
+  }
       form {
         display: flex;
         flex-direction: column;
@@ -29,10 +33,10 @@
       input {
         padding: 10px;
         outline: none;
-        border: 3px solid #37baee;
+        border: 3px solid purple;
       }
       button {
-        background-color: #37baee;
+        background-color: purple;
         color: white;
         padding: 10px;
         border: none;
@@ -81,8 +85,8 @@
       if (type == "reset") {
         root.innerHTML = `<form id="submitId">
           <h1>Reset Password</h1>
-          <input type="password" name="password" id="password" />
-          <input type="password" name="cpassword" id="cpassword" />
+          <input type="password" name="password" id="password" placeholder="New Password" />
+          <input type="password" name="cpassword" id="cpassword"  placeholder="Confirm Password"/>
           <div class="error"></div>
           <button type="submit">Reset Password</button>
           <div class="success"></div>
@@ -132,4 +136,4 @@
       }
     </script>
   </body>
-</html> --}}
+</html>
