--- a/server/views/ResetPassword.hbs
+++ b/server/views/ResetPassword.hbs
@@ -73,6 +73,7 @@
   <body>
     <div id="root"></div>
 
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="module">
       // Get the params
       const root = document.querySelector("#root");
@@ -113,15 +114,7 @@
             return (errorBox.innerHTML = "Password Doesn,t match");
           }
           console.log(formData);
-          fetch("http://localhost:8800/users/password-reset", {
-            method: "Post",
-            headers: {
-              Accept: "application/json",
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({ pass1, userId: id }),
-          })
-            .then((res) => res.json())
+         let data  axios.post("http://localhost:8800/users/password-reset", {userId: id, password: pass1.value}).then((res) => console.log(res))
             .catch((err) => console.log(err.message));
         });
       } else if (status == "error") {
