--- a/server/views/ResetPassword.hbs
+++ b/server/views/ResetPassword.hbs
@@ -72,11 +72,10 @@
   </head>
   <body>
     <div id="root"></div>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="module">
       // Get the params
-      const root = document.querySelector("#root");
       const urlParams = new URLSearchParams(window.location.search);
       const type = urlParams.get("type");
       const id = urlParams.get("id");
@@ -114,7 +113,7 @@
             return (errorBox.innerHTML = "Password Doesn,t match");
           }
           console.log(formData);
-         let data  axios.post("http://localhost:8800/users/password-reset", {userId: id, password: pass1.value}).then((res) => console.log(res))
+         let data  = axios.post("http://localhost:8800/users/password-reset", {userId: id, password: pass1.value}).then((res) => console.log(res))
             .catch((err) => console.log(err.message));
         });
       } else if (status == "error") {
