--- a/server/views/ResetPassword.hbs
+++ b/server/views/ResetPassword.hbs
@@ -107,12 +107,14 @@
         let form = document.querySelector("#submitId");
         form.addEventListener("submit", (e) => {
           e.preventDefault();
+          
+          if (!pass1.value || !pass2.value) {
+            return (errorBox.innerHTML = "Passwords can't be empty");
+          }
           if (pass1.value !== pass2.value) {
             return (errorBox.innerHTML = "Passwords don't match");
           }
- if (pass1.value) {
-            return (errorBox.innerHTML = "Passwords don't match");
-          }
+
           // Use axios.post with async/await
           (async () => {
             try {
